# GameOfLife

./: CMakeLists.txt  Cell.cpp  Cell.hpp  GameBoard.cpp  GameBoard.hpp  Grid.cpp  Makefile  README.md  main.cpp
include/: Cell.hpp  GameBoard.hpp  Grid.hpp  State.hpp  ThreadHelper.hpp
src/: CMakeLists.txt  Cell.cpp  GameBoard.cpp  Grid.cpp  ThreadHelper.cpp  main.cpp
